# Portfolia-AI

./: .gitignore
Portfolio_API/: .env  .env.example  Dockerfile  Guide.md  database_schema.sql  main.py  migrate_db.py  portfolio.db  pyproject.toml  requirements.txt  seed_data.py
Portfolio_API/app/api/: deps.py
Portfolio_API/app/api/v1/: api.py
Portfolio_API/app/api/v1/endpoints/: auth.py  cv.py  portfolio.py
Portfolio_API/app/core/: config.py  database.py  security.py
Portfolio_API/app/crud/: crud.py
Portfolio_API/app/models/: models.py
Portfolio_API/app/schemas/: schemas.py
Portfolio_API/app/services/: auth_service.py  llm_service.py
Portfolio_APP/: .env  README.md  index.html  package-lock.json  package.json
Portfolio_APP/src/: App.css  App.jsx  index.css  main.jsx
Portfolio_APP/src/components/: ProfileForm.jsx
Portfolio_APP/src/config/: api.js
Portfolio_APP/src/context/: PortfolioContext.jsx
Portfolio_APP/src/hooks/: useApi.js
Portfolio_APP/src/services/: apiClient.js  portfolioService.js
Portfolio_APP/src/utils/: dataTransform.js
supabase/: supabase_key.txt
